--- a/src/style.css
+++ b/src/style.css
@@ -1622,3 +1622,90 @@ body.cursor-down .cursor {
         transform: translateX(var(--end));
     }
 }
+
+/* --- Color Palette --- */
+.container-items {
+    display: flex;
+    transform-style: preserve-3d;
+    transform: perspective(1000px);
+}
+
+.item-color {
+    position: relative;
+    flex-shrink: 0;
+    width: 32px;
+    height: 40px;
+    border: none;
+    outline: none;
+    transition: 500ms cubic-bezier(0.175, 0.885, 0.32, 1.1);
+    cursor: pointer;
+}
+
+.item-color::after {
+    position: absolute;
+    content: "";
+    inset: 0;
+    width: 40px;
+    height: 40px;
+    background-color: var(--color);
+    border-radius: 6px;
+    transform: scale(1.2);
+    pointer-events: none;
+    transition: 500ms cubic-bezier(0.175, 0.885, 0.32, 1.1);
+}
+
+.item-color::before {
+    position: absolute;
+    content: attr(aria-color);
+    left: 65%;
+    bottom: 52px;
+    font-size: 8px;
+    line-height: 12px;
+    transform: translateX(-50%);
+    padding: 2px 0.25rem;
+    background-color: #ffffff;
+    border-radius: 6px;
+    pointer-events: none;
+    opacity: 0;
+    visibility: hidden;
+    transition: 500ms cubic-bezier(0.175, 0.885, 0.32, 1.1);
+    color: #000;
+}
+
+.item-color:hover {
+    transform: scale(1.5);
+    z-index: 99999;
+}
+
+.item-color:hover::before {
+    opacity: 1;
+    visibility: visible;
+}
+
+.item-color:active::after {
+    transform: scale(1.1);
+}
+
+.item-color:focus::before {
+    content: "✅Copy";
+}
+
+.item-color:hover+* {
+    transform: scale(1.3);
+    z-index: 9999;
+}
+
+.item-color:hover+*+* {
+    transform: scale(1.15);
+    z-index: 999;
+}
+
+.item-color:has(+ *:hover) {
+    transform: scale(1.3);
+    z-index: 9999;
+}
+
+.item-color:has(+ * + *:hover) {
+    transform: scale(1.15);
+    z-index: 999;
+}
